--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,9 @@ nav {
     background-color: var(--white);
     position: absolute;
     top: 61px;
-    padding: 24px; 
+    left: 0;
+    width: calc(100% - 24px);
+    padding-left: 24px;
 }
 
 .mobile-menu a {
@@ -205,14 +207,19 @@ nav {
     margin-bottom: 20px;
 }
 
-/* <Aside> (Product Detail y Shopping Cart) */
-.product-detail {
+/* <Aside general*/
+aside {
     width: 360px;
-    padding: 0px 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
     background-color: var(--white);
+}
+
+/*Shipping Cart  */
+
+#shoppingCartContainer{
+    padding: 0px 24px;
 }
 
 .title-container {
@@ -306,6 +313,66 @@ nav {
     height: 50px;
 }
 
+/* Product Detail */
+.product-detail-close {
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    background: var(--white);
+    padding: 4px;
+    border-radius: 50%;
+    
+}
+
+.product-detail-close:hover {
+    cursor: pointer;
+}
+
+#productDetail > img:nth-child(2) {
+    width: 100%;
+    height: 360%;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+
+.primary-botton img {
+    margin-right: 10px;
+}
+
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 14px;
+}
+
+#productDetail .product-info {
+    margin: 24px 24px 0px 24px;
+}
+
+#productDetail .product-info p:nth-child(1) {
+  font-size: var(--md); 
+  font-weight: bold; 
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+#productDetail .product-info p:nth-child(2) {
+  font-size: var(--md); 
+  color: var(--very-light-pink);
+  margin-bottom: 24px;
+  margin-top: 0;
+}
+
+#productDetail .product-info p:nth-child(3) {
+  font-size: var(--sm); 
+  color: var(--very-light-pink);
+  margin-bottom: 24px;
+  margin-top: 0;
+}
+
 /* Home products */
 .card-container {
     display: grid;
@@ -326,32 +393,32 @@ nav {
     object-fit: cover;
 }
 
-.product-info {
+.product-card .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 12px;
 }
 
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
 }
 
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0;
     margin-bottom: 0;
 }
 
-.product-info figure {
+.product-card .product-info figure {
     margin: 0;
 }
 
-.product-info figure img {
+.product-card .product-info figure img {
     width: 35px;
     height: 35px;
 }
